Add compiled file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,5 @@
 FROM openjdk:14-jdk-alpine
-COPY ./cadastro/target/*.jar app.jar
+# COPY ./cadastro/target/*.jar app.jar
+#Copy the compiled file
+COPY ./srcbuild/*.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
